--- a/Presentation/Nop.Web/App_Data/dataSettings.json
+++ b/Presentation/Nop.Web/App_Data/dataSettings.json
@@ -1,5 +1,7 @@
 ﻿{
-  "DataConnectionString": "Data Source=ATI-PC\\SQL2019;Initial Catalog=nopDempo;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=marsit@123",
+  "DataConnectionString": "Data Source=173.214.170.234;Initial Catalog=umarafta_nopde;User ID=nopadmin;Password=UmarA@295",
+  //"DataConnectionString": "Data Source=.\\SQLEXPRESS;Initial Catalog=NopDb;Integrated Security=True;Persist Security Info=False",
+  //"DataConnectionString": "Data Source=ATI-PC\\SQL2019;Initial Catalog=nopDempo;Integrated Security=False;Persist Security Info=False;User ID=sa;Password=marsit@123",
   "DataProvider": "sqlserver",
   "RawDataSettings": {}
 }
